--- a/beta/about_us.html
+++ b/beta/about_us.html
@@ -140,11 +140,6 @@
  <td >+91 9621564400</td>
 </tr>
  <tr>
-  <td > Harsh Pokharna </td>
-<td >Prepartion Co-ordinator</td> <td ><a href="mailto:  " target="_parent">  </a></td>
-<td >  </td>
-</tr>
- <tr>
   <td > Anchal Goyal </td>
 <td >Prepartion Co-ordinator</td> <td ><a href="mailto:anchalg@iitk.ac.in" target="_parent">anchalg@iitk.ac.in</a></td>
 <td >+91 7607457002</td>
@@ -217,6 +212,31 @@
 <td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:rachitja@iitk.ac.in" target="_parent"> rachitja@iitk.ac.in </td>
 <td >+91 9554884757</td>
 </tr>
+<tr>
+  <td > Rohit Kakkar</td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:rohitka@iitk.ac.in" target="_parent"> rohitka@iitk.ac.in </td>
+<td >+91 9621226205</td>
+</tr>
+<tr>
+  <td > Chetan Chauhan </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:chetanc@iitk.ac.in" target="_parent"> chetanc@iitk.ac.in </td>
+<td >+91 8960386267</td>
+</tr>
+<tr>
+  <td > Aditya Jain </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:adityj@iitk.ac.in" target="_parent"> adityj@iitk.ac.in </td>
+<td >+91 8960419300</td>
+</tr>
+<tr>
+  <td > Gaurav Gupta </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:gaurag@iitk.ac.in" target="_parent"> gaurag@iitk.ac.in </td>
+<td >+91 9005808527</td>
+</tr>
+<tr>
+  <td > Manu Seth </td>
+<td >Pitching Co-ordinator</td><td class=xl168><a href="mailto:manuseth@iitk.ac.in" target="_parent"> manuseth@iitk.ac.in </td>
+<td >+91 8960885631</td>
+</tr>
 </tbody>
 </table>
 
@@ -237,6 +257,70 @@
   </thead>
  <tbody>
 
+ <tr>
+  <td > Avijeet Chatterjee </td>
+<td >CELT</td>
+<td ><a href="mailto:avijitc@iitk.ac.in">avijitc@iitk.ac.in</td>
+<td > </td>
+
+</tr>
+<tr>
+  <td > Vivek Shankar </td>
+<td >Design Programme</td>
+<td ><a href="mailto:viveksn@iitk.ac.in">viveksn@iitk.ac.in</td>
+<td >+91 8953436143</td>
+
+</tr>
+<tr>
+  <td > Manas Kumar </td>
+<td >Nuclear Engineering</td>
+<td ><a href="mailto:manaskr@iitk.ac.in">manaskr@iitk.ac.in</td>
+<td >+91 8127576268</td>
+
+</tr>
+  <tr>
+  <td > Apratim Tiwari </td>
+<td >Chemistry</td>
+<td ><a href="mailto:  ">  </td>
+<td >  </td>
+
+</tr>
+
+ <tr>
+  <td > Piyush Gupta </td>
+<td >Economics</td>
+<td ><a href="mailto:ppiyush@iitk.ac.in">ppiyush@iitk.ac.in</td>
+<td >+91 9651648844</td>
+
+</tr>
+ <tr>
+  <td > Abhishek Dhandharia </td>
+<td >Mathematics and Scientific Computing</td>
+<td ><a href="mailto:abhidhan@iitk.ac.in">abhidhan@iitk.ac.in</td>
+<td >+91 8960370701</td>
+
+</tr>
+ <tr>
+  <td > Pravin Sreenivasan </td>
+<td >MBA</td>
+<td ><a href="mailto:  ">  </td>
+<td >  </td>
+
+</tr>
+ <tr>
+  <td > Niraj Kumar </td>
+<td >Physics</td>
+<td ><a href="mailto:kniraj@iitk.ac.in">kniraj@iitk.ac.in</td>
+<td >+91 9794284963</td>
+
+</tr>
+ <tr>
+  <td > Uddipto Charaborty </td>
+<td >Statistics</td>
+<td ><a href="mailto:uddipto@iitk.ac.in">uddipto@iitk.ac.in</td>
+<td >+91 7897768117</td>
+
+</tr>
  <tr>
   <td > Ankit Deo </td>
 <td >Aerospace Engineering</td>
@@ -279,13 +363,7 @@
 <td >+91 9651789898</td>
 
 </tr>
- <tr>
-  <td > Avijeet Chatterjee </td>
-<td >CELT</td>
-<td ><a href="mailto:avijitc@iitk.ac.in">avijitc@iitk.ac.in</td>
-<td > </td>
 
-</tr>
  <tr>
   <td > Nishant Bhartiya </td>
 <td >Chemical Enginnering</td>
@@ -328,20 +406,7 @@
 <td ></td>
 
 </tr>
- <tr>
-  <td > Vivek Shankar </td>
-<td >Design Programme</td>
-<td ><a href="mailto:viveksn@iitk.ac.in">viveksn@iitk.ac.in</td>
-<td >+91 8953436143</td>
-
-</tr>
- <tr>
-  <td > Piyush Gupta </td>
-<td >Economics</td>
-<td ><a href="mailto:ppiyush@iitk.ac.in">ppiyush@iitk.ac.in</td>
-<td >+91 9651648844</td>
-
-</tr>
+ 
  <tr>
   <td > Amalladinne Vamsi Krishna </td>
 <td >Electrical Engineering</td>
@@ -405,13 +470,7 @@
 <td >+91 7607454538</td>
 
 </tr>
- <tr>
-  <td > Abhishek Dhandharia </td>
-<td >Math and Scientific Computing</td>
-<td ><a href="mailto:abhidhan@iitk.ac.in">abhidhan@iitk.ac.in</td>
-<td >+91 8960370701</td>
 
-</tr>
  <tr>
   <td > Chirag Maheshwari </td>
 <td >Material Sciences and Engineering</td>
@@ -440,34 +499,8 @@
 <td >  </td>
 
 </tr>
- <tr>
-  <td > Manas Kumar </td>
-<td >Nuclear Engineering</td>
-<td ><a href="mailto:manaskr@iitk.ac.in">manaskr@iitk.ac.in</td>
-<td >+91 8127576268</td>
 
-</tr>
- <tr>
-  <td > Niraj Kumar </td>
-<td >Physics</td>
-<td ><a href="mailto:kniraj@iitk.ac.in">kniraj@iitk.ac.in</td>
-<td >+91 9794284963</td>
-
-</tr>
- <tr>
-  <td > Uddipto Charaborty </td>
-<td >Statistics</td>
-<td ><a href="mailto:uddipto@iitk.ac.in">uddipto@iitk.ac.in</td>
-<td >+91 7897768117</td>
-
-</tr>
- <tr>
-  <td > Apratim Tiwari </td>
-<td >Chemistry</td>
-<td ><a href="mailto:  ">  </td>
-<td >  </td>
-
-</tr>
+ 
  <tr>
   <td > Khushboo Gupta </td>
 <td >  </td>
@@ -475,18 +508,7 @@
 <td >  </td>
 
 </tr>
- <tr>
-  <td > Pravin Sreenivasan </td>
-<td >MBA</td>
-<td ><a href="mailto:  ">  </td>
-<td >  </td>
 
-</tr>
- <tr>
-  <td > Harish </td>
-<td >Chemistry</td>
-<td ><a href="mailto:hmalagar@iitk.ac.in">hmalagar@iitk.ac.in</td>
-<td >+91 7376216844</td>
 
  </tbody>
 
