--- a/beta/brochures.html
+++ b/beta/brochures.html
@@ -26,146 +26,148 @@
       <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       <span></h3>
     </div>
+  </div>
+  <div class="row-fluid white-gray">
     <div class="row-fluid">
-      <h3>Aerospace Engineering
+      <h4>Aerospace Engineering
       <span class="pull-right">
         <a href="assets/docs/brochures/AE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
     <div class="row-fluid">
-      <h3>Bio. Sci. &amp; Engineering
+      <h4>Bio. Sci. &amp; Engineering
       <span class="pull-right">
         <a href="assets/docs/brochures/BSBE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
     <div class="row-fluid">
-      <h3>Chemical Engineering
+      <h4>Chemical Engineering
       <span class="pull-right">
         <a href="assets/docs/brochures/CHE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
 
     <div class="row-fluid">
-      <h3>Chemistry
+      <h4>Chemistry
       <span class="pull-right">
         <a href="assets/docs/brochures/CHM_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
 
     <div class="row-fluid">
-      <h3>Civil Engineering
+      <h4>Civil Engineering
       <span class="pull-right">
         <a href="assets/docs/brochures/CE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
 
     <div class="row-fluid">
-      <h3>Computer Sci. &amp; Engineering
+      <h4>Computer Sci. &amp; Engineering
       <span class="pull-right">
         <a href="assets/docs/brochures/CSE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
 
     <div class="row-fluid">
-      <h3> Design Programme
+      <h4> Design Programme
       <span class="pull-right">
         <a href="assets/docs/brochures/MDES_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
 
     <div class="row-fluid">
-      <h3>Economics
+      <h4>Economics
       <span class="pull-right">
         <a href="assets/docs/brochures/ECO_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
 
     <div class="row-fluid">
-      <h3>Electrical Engineering
+      <h4>Electrical Engineering
       <span class="pull-right">
         <a href="assets/docs/brochures/EE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
 
     <div class="row-fluid">
-      <h3>Environmental Eng. &amp; Mgmt.
+      <h4>Environmental Eng. &amp; Mgmt.
       <span class="pull-right">
         <a href="assets/docs/brochures/EEM_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
 
     <div class="row-fluid">
-      <h3>Industrial Management Engineering
+      <h4>Industrial Management Engineering
       <span class="pull-right">
         <a href="assets/docs/brochures/IME_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
 
     <div class="row-fluid">
-      <h3>Laser Technology
+      <h4>Laser Technology
       <span class="pull-right">
         <a href="assets/docs/brochures/LT_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
 
     <div class="row-fluid">
-      <h3>MBA Program
+      <h4>MBA Program
       <span class="pull-right">
         <a href="assets/docs/brochures/MBA_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
 
     <div class="row-fluid">
-      <h3>Material Sci. &amp; Engineering
+      <h4>Material Sci. &amp; Engineering
       <span class="pull-right">
         <a href="assets/docs/brochures/MSE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
 
     <div class="row-fluid">
-      <h3>Materials Science Programme
+      <h4>Materials Science Programme
       <span class="pull-right">
         <a href="assets/docs/brochures/MSP_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
 
     <div class="row-fluid">
-      <h3>Mechanical Engineering
+      <h4>Mechanical Engineering
       <span class="pull-right">
         <a href="assets/docs/brochures/ME_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
 
     <div class="row-fluid">
-      <h3>Mathematics &amp; Scientifice Computing
+      <h4>Mathematics &amp; Scientifice Computing
       <span class="pull-right">
         <a href="assets/docs/brochures/MSC_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
 
     <div class="row-fluid">
-      <h3>Statistics
+      <h4>Statistics
       <span class="pull-right">
         <a href="assets/docs/brochures/STAT_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
-      </span></h3>
+      </span></h4>
     </div>
 
    </div>
