--- a/beta/index.html
+++ b/beta/index.html
@@ -70,14 +70,22 @@
             
                 <img class="pull-right lft-img-margin img-width-200" src="assets/img/director.jpg" alt="" />
                 <p>
-                    As the world marches into the 21st century, India, at the forefront of the developing world needs an increasing lot of intelligent, astute, hard working and technically proficient minds. Indian Institute of Technology Kanpur (IIT K) well known for its cutting edge research and teaching programmes prides itself on creating an environment that facilitates in not only the academic but the overall development of the student.
+                    Since the advent of this great institution, IIT Kanpur has vision to provide quality technical
+education and act as a rostrum for scientific research, and a mission to develop human
+potential to its greatest degree. In accordance with this vision IIT Kanpur has maintained an 
+exemplary record of academic contribution for achieving excellence in teaching, research
+and governance. A sincere effort has now begun to restore the vantage position of IITK as 
+the top technological Institute in India, The students of IITK are a cherry picked group. 
+They have been chosen through a process that makes IITK one of the toughest institutes to 
+get an admission.
                 </p>
                 <div>
                 <blockquote class="hero">
-                   <p> The hall mark of IIT K has always been relentless strive towards excellence and perfection. </p>
+                   <p> IITK owes a lot to its alumni for all its international reputation and national standing. The
+students usually come from varied educational and cultural backgrounds</p>
                 </blockquote>
                 </div>
-                <p><a href="chairman_message.html">Read more</a></p>
+                <p><a href="director_message.html">Read more</a></p>
             </div>
 
             
