Add subheading to contacts

--- a/beta/about_us.html
+++ b/beta/about_us.html
@@ -246,6 +246,7 @@
 <div class="row-fluid">
 <div class="span12">
 <div class="headline"><h3>Departmental Co-ordinators</h3></div>
+<div class="headline"><h4>Inter-disciplinary specializations</h4></div>
 <table class="table table-striped">
   <thead>
     <tr>
@@ -259,7 +260,7 @@
 
  <tr>
   <td > Avijeet Chatterjee </td>
-<td >CELT</td>
+<td >Laser Technology</td>
 <td ><a href="mailto:avijitc@iitk.ac.in">avijitc@iitk.ac.in</td>
 <td > </td>
 
@@ -278,6 +279,19 @@
 <td >+91 8127576268</td>
 
 </tr>
+</tbody>
+</table>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Department</th>
+      <th>EMail</th>
+      <th>Phone</th>
+    </tr>
+  </thead>
+ <tbody>
+<div class="headline"><h4>Science &amp; Humanities</h4></div>
   <tr>
   <td > Apratim Tiwari </td>
 <td >Chemistry</td>
@@ -321,6 +335,19 @@
 <td >+91 7897768117</td>
 
 </tr>
+</tbody>
+</table>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Department</th>
+      <th>EMail</th>
+      <th>Phone</th>
+    </tr>
+  </thead>
+ <tbody>
+<div class="headline"><h4>Engineering</h4></div>
  <tr>
   <td > Ankit Deo </td>
 <td >Aerospace Engineering</td>
