Add stay at kanpur

--- a/beta/reach_us.html
+++ b/beta/reach_us.html
@@ -28,7 +28,7 @@
       From Lucknow Airport you can take a taxi from the Airport Taxi Stand to IIT Kanpur, or you could book one from IIT Kanpur. The rough travel time is 1 1/2 to 2 hours. The rough cost is between Rs.1000 to Rs.1500 (depending on vehicle type).<br/>
      </p><p>
       IIT Kanpur is also the first institute to offer helicopter services from Lucknow Airport to 
-      IIT Kanpur airfield (inside the campus). The estimated charges are Rs. 6000 per person. If you would like to avail the facility please get in touch with SPO, since the helicopter service schedule is yet to be finalised.</p>
+      IIT Kanpur airfield (inside the campus). The estimated charges are Rs. 6000 per person. If you would like to avail the facility please get in touch with SPO, since the helicopter service is subject to availability of chopper rights.</p>
       <p> There is also a single flight from New Delhi to Kanpur (AI 9605). 
         <ul>
           <li> AI 9605 :Delhi - Kanpur : Mon,Wed,Fri</li>
@@ -53,6 +53,15 @@
       Kanpur is connected to NH-2 that runs between Amritsar and Kolkata and connecting cities like Delhi, Agra, Allahabad, Patna. Delhi is about 480 KM through this route. Kanpur is also connected to Lucknow on NH25 and is about 91 km from Lucknow. Kanpur is connected to Delhi (440 KM) through another parallel highway NH81 that through Ghaziabad and Aligarh.
     </p>
     </div>
+
+    <div class="row-fluid">
+    <div class="headline"><h3>Stay at Kanpur</h3></div>
+    
+      <p>
+      Kanpur is connected to NH-2 that runs between Amritsar and Kolkata and connecting cities like Delhi, Agra, Allahabad, Patna. Delhi is about 480 KM through this route. Kanpur is also connected to Lucknow on NH25 and is about 91 km from Lucknow. Kanpur is connected to Delhi (440 KM) through another parallel highway NH81 that through Ghaziabad and Aligarh.
+    </p>
+    </div>
+
   <div class="row-fluid margin-bottom-30">
         <div class="span3">
           <div class="row-fluid">
