Stay at iit kanpur

--- a/beta/reach_us.html
+++ b/beta/reach_us.html
@@ -58,8 +58,7 @@
     <div class="headline"><h3>Stay at Kanpur</h3></div>
     
       <p>
-      Kanpur is connected to NH-2 that runs between Amritsar and Kolkata and connecting cities like Delhi, Agra, Allahabad, Patna. Delhi is about 480 KM through this route. Kanpur is also connected to Lucknow on NH25 and is about 91 km from Lucknow. Kanpur is connected to Delhi (440 KM) through another parallel highway NH81 that through Ghaziabad and Aligarh.
-    </p>
+      The company officials can avail the facility of accomodation in the Visitor's hotel, IIT Kanpur, on payment basis subject to availability of the rooms. Kanpur city also has many good hotels with 3-4 star rating. The list of the hotels and their contacts can be found <code><a href="assets/docs/hotels.pdf">here</a></code>. The rooms would be unavailable during various conferences in IIT Kanpur, and also during the placement season from December 1<sup>st</sup>. Please contact <a href="about_us.html">SPO</a> for any accomodation requests within the campus.  
     </div>
 
   <div class="row-fluid margin-bottom-30">
