Brochures + forms add

--- a/beta/_navbar.html
+++ b/beta/_navbar.html
@@ -48,8 +48,8 @@
                                 <li class="sub-heading"><a>Internships</a></li>
                                 <li><a href="#">Internships</a></li>
                                 <li class="sub-heading"><a>Downloads</a></li>
-                                <li><a href="#">Job Announcement Form</a></li>
-                                <li><a href="#">Campus Recruitement Guide</a></li>
+                                <li><a href="assets/docs/JAF.doc">Job Announcement Form</a></li>
+                                <li><a href="assets/docs/CRG.pdf">Campus Recruitement Guide</a></li>
                             </ul>    
                             <b class="caret-out"></b>                        
                         </li>
@@ -64,8 +64,8 @@
                                 <li><a href="http://spo.iitk.ac.in/preparation">Preparation Portal</a></li>
                                 <li><a href="#">FAQs</a></li>
                                 <li class="sub-heading"><a>Downloads</a></li>
-                                <li><a href="#">Leave Application</a></li>
-                                <li><a href="#">Project Verifcation Form</a></li> 
+                                <li><a href="assets/docs/LAF.doc">Leave Application</a></li>
+                                <li><a href="assets/docs/PVF.doc">Project Verifcation Form</a></li> 
                             </ul>
                             <b class="caret-out"></b>                        
                         </li>
