--- a/beta/brochures.html
+++ b/beta/brochures.html
@@ -31,21 +31,21 @@
     <div class="row-fluid">
       <h4>Aerospace Engineering
       <span class="pull-right">
-        <a href="assets/docs/brochures/AE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/Aero.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
     <div class="row-fluid">
-      <h4>Bio. Sci. &amp; Engineering
+      <h4>Biological Science &amp; Engineering
       <span class="pull-right">
-        <a href="assets/docs/brochures/BSBE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/Bsbe.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
     <div class="row-fluid">
       <h4>Chemical Engineering
       <span class="pull-right">
-        <a href="assets/docs/brochures/CHE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/Chm.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -61,7 +61,7 @@
     <div class="row-fluid">
       <h4>Civil Engineering
       <span class="pull-right">
-        <a href="assets/docs/brochures/CE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/CE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -69,7 +69,7 @@
     <div class="row-fluid">
       <h4>Computer Sci. &amp; Engineering
       <span class="pull-right">
-        <a href="assets/docs/brochures/CSE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/CSE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -77,7 +77,7 @@
     <div class="row-fluid">
       <h4> Design Programme
       <span class="pull-right">
-        <a href="assets/docs/brochures/MDES_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/Desing.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -85,7 +85,7 @@
     <div class="row-fluid">
       <h4>Economics
       <span class="pull-right">
-        <a href="assets/docs/brochures/ECO_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/Eco.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -93,7 +93,7 @@
     <div class="row-fluid">
       <h4>Electrical Engineering
       <span class="pull-right">
-        <a href="assets/docs/brochures/EE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/EE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -101,7 +101,7 @@
     <div class="row-fluid">
       <h4>Environmental Eng. &amp; Mgmt.
       <span class="pull-right">
-        <a href="assets/docs/brochures/EEM_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/EEM_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -109,7 +109,7 @@
     <div class="row-fluid">
       <h4>Industrial Management Engineering
       <span class="pull-right">
-        <a href="assets/docs/brochures/IME_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/IME_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -117,7 +117,7 @@
     <div class="row-fluid">
       <h4>Laser Technology
       <span class="pull-right">
-        <a href="assets/docs/brochures/LT_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/Celp.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -125,15 +125,15 @@
     <div class="row-fluid">
       <h4>MBA Program
       <span class="pull-right">
-        <a href="assets/docs/brochures/MBA_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/MBA_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
 
     <div class="row-fluid">
-      <h4>Material Sci. &amp; Engineering
+      <h4>Material Sciences &amp; Engineering
       <span class="pull-right">
-        <a href="assets/docs/brochures/MSE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/Mame.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -141,7 +141,7 @@
     <div class="row-fluid">
       <h4>Materials Science Programme
       <span class="pull-right">
-        <a href="assets/docs/brochures/MSP_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/Msp.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -149,7 +149,7 @@
     <div class="row-fluid">
       <h4>Mechanical Engineering
       <span class="pull-right">
-        <a href="assets/docs/brochures/ME_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/Brochure_ME.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -157,7 +157,7 @@
     <div class="row-fluid">
       <h4>Mathematics &amp; Scientifice Computing
       <span class="pull-right">
-        <a href="assets/docs/brochures/MSC_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/Mth.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
@@ -165,7 +165,7 @@
     <div class="row-fluid">
       <h4>Statistics
       <span class="pull-right">
-        <a href="assets/docs/brochures/STAT_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="assets/docs/STAT_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
         <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
       </span></h4>
     </div>
